// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Dance> renders as expected with currentTime 1`] = `
<div
  className="dance-style"
>
  <h2>
    Dance Style: 
    Ageha
  </h2>
  <SimpleVideo
    src="https://www.dropbox.com/s/e5hv7tovg11qp3d/ageha_Front.mov?dl=1"
  />
</div>
`;

exports[`<Dance> renders as expected with no currentTime 1`] = `
<div
  className="dance-style"
>
  <h2>
    Dance Style: 
  </h2>
</div>
`;
